# 4d-stem-compression-benchmark-public

./: .gitignore  README.md  prepare_arxiv_bundle.sh  pyproject.toml
implementation/: README.md  WORKFLOW.md  requirements.txt
implementation/fixtures/: smoke_test.emd
implementation/src/: Fig1_combined_performance.py  Fig2_radar_chart.py  Fig3_sparsity_vs_compression.py  Fig4_chunking_comparison.py  MULTI_RUN_README.md  README_VISUALIZATIONS.md  aggregate_multi_run_results.py  compression_benchmark.py  data_loader.py  diagnose_read_speed.py  plot_chunking_comparison.py  plot_combined_performance.py  plot_radar_chart.py  regenerate_figure3.py  run_all_benchmarks.py  run_benchmark.py  run_multiple_benchmarks.py  smoke_test_public.py  test_fixed_benchmark.py  verify_chunk_alignment.py
implementation/src/paper_artifacts/datasets/: build_dataset_inventory.py
implementation/src/paper_artifacts/tables/: Tab5_chunking_summary.py  tab_chunking_summary.py  tab_dataset_summary.py  tab_implementation_families.py  tab_methods_datasets.py
results/: dataset_inventory.csv
results/aggregated/: all_runs_combined.csv  metadata.json  statistics.csv  summary_report.txt
