[project]
name = "4d-stem-compression-benchmark-public"
version = "0.0.0"
description = "Public-release artifacts and scripts for 4D-STEM compression benchmarking"
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "h5py>=3.8.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "hdf5plugin>=4.0.0",
  "blosc2>=2.0.0",
  "zstandard>=0.21.0",
  "lz4>=4.3.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
]
notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.25.0",
  "notebook>=7.0.0",
]

[tool.uv]
package = false
